<resources>
    <string name="app_name">EcultureTool</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nome Curatore</string>
    <string name="surname">Cognome Curatore</string>
    <string name="email">Email Curatore</string>
    <string name="place">Struttura Curatore</string>
    <string-array name="tipologie_luoghi">
        <item>Museo</item>
        <item>Area archeologica</item>
        <item>Mostra itinerante</item>
        <item>Sito culturale</item>
    </string-array>
    <string-array name="tipologie_oggetti">
        <item>Quadro</item>
        <item>Statua</item>
        <item>Scultura</item>
        <item>Altro</item>
    </string-array>
    <string name="msg_permesso_storage">Per usare questa funzionalità è necessario consentire l\'accesso a risorse esterne.</string>
    <string name="msg_permesso_fotocamera">Per usare questa funzionalità è necessario consentire l\'accesso alla fotocamera.</string>
    <string name="msg_internet_non_disponibile">È necessaria una connessione ad internet per avere accesso a questa funzione</string>
    <string name="errore">Si è verificato un problema inaspettato</string>
    <string name="db_errore_scrittura">Si è verificato un problema inaspettato con la scrittura nel database</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="luogo_selezionato">Luogo selezionato</string>
    <string name="nome_luogo">Nome Luogo</string>
    <string name="descrizione_luogo">Descrizione Luogo</string>
    <string name="tipologia_del_luogo">Tipologia del luogo</string>
    <string name="crea_luogo">Crea luogo</string>
    <string name="nome_oggetto">Nome Oggetto</string>
    <string name="descrizione_oggetto">Descrizione Oggetto</string>
    <string name="tipologia_oggetto">Tipologia oggetto</string>
    <string name="zona_di_appartenenza">Zona di appartenenza</string>
    <string name="crea_oggetto">Crea oggetto</string>
    <string name="nome_zona">Nome Zona*</string>
    <string name="descrizione_zona">Descrizione Zona</string>
    <string name="numero_massimo_di_oggetti">Numero massimo di oggetti</string>
    <string name="NB">N.B. Se il campo sovrastante viene lasciato vuoto, il numero di oggetti viene settato di default a 10.</string>
    <string name="crea_zona">Crea Zona</string>
    <string name="registrati">Registrati</string>
    <string name="seleziona_luogo">Seleziona luogo</string>
    <string name="elimina_luogo">Elimina Luogo</string>
    <string name="elimina_oggetto">Elimina Oggetto</string>
    <string name="aggiungi_oggetti">Aggiungi oggetti</string>
    <string name="elimina_zona">Elimina Zona</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="luoghi">Luoghi</string>
    <string name="modifica_luogo">Modifica Luogo</string>
    <string name="modifica_oggetto">Modifica Oggetto</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="password_attuale">Password Attuale</string>
    <string name="nuova_password">Nuova Password</string>
    <string name="conferma_password">Conferma password</string>
    <string name="conferma">Conferma</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="modifica_zona">Modifica Zona</string>
    <string name="oggetti">Oggetti</string>
    <string name="inserisci_email">Inserisci Email</string>
    <string name="avanti">Avanti</string>
    <string name="scatta_una_foto">Scatta una foto</string>
    <string name="seleziona_da_file">Seleziona da file</string>
    <string name="salva">Salva</string>
    <string name="cancella_oggetto">Vuoi cancellare definitivamente l\'oggetto?</string>
    <string name="cancella_percorso">Vuoi cancellare definitivamente il percorso?</string>
    <string name="si">Si</string>
    <string name="cancella_profilo">Vuoi cancellare definitivamente il tuo profilo?</string>
    <string name="cancella_zona">Vuoi cancellare definitivamente la zona?</string>
    <string name="cancella_luogo">Vuoi cancellare definitivamente il luogo?</string>
    <string name="NB_zona">N.B. se cancelli una zona anche tutti gli oggetti in essa contenuti saranno cancellati</string>
    <string name="NB_luogo">N.B. se cancelli un luogo anche tutti i relativi oggetti e zone verranno cancellati</string>
    <string name="percorsi">Percorsi</string>
    <string name="cambia_luogo">Cambia Luogo</string>
    <string name="esci">Esci</string>
    <string name="profilo">Profilo</string>
    <string name="elimina_profilo">Elimina Profilo</string>
    <string name="cambia_lingua">Cambia Lingua</string>
    <string name="nome_luogo_richiesto">Il nome del luogo è richiesto</string>
    <string name="nome_esistente">Nome già esistente</string>
    <string name="descrizione_richiesta">La descrizione è richiesta</string>
    <string name="nome_oggetto_richiesto">Il nome dell\'oggetto è richiesto</string>
    <string name="inserimento_immagine">Devi inserire un\'immagine</string>
    <string name="nome_zona_richiesto">Il nome della zona è richiesto</string>
    <string name="numero_max"> Attenzione! Il numero massimo è 10</string>
    <string name="registrazione_completata">Registrazione completata</string>
    <string name="registrazione_fallita">Registrazione Fallita</string>
    <string name="min_luoghi">Ci deve essere almeno un luogo nell\'app</string>
    <string name="avviso">Avviso</string>
    <string name="avviso_luoghi_zone">Il luogo e le zone associate sono stati eliminati</string>
    <string name="email_richiesta">L\'email è richiesta</string>
    <string name="email_valida">L\'email deve essere valida</string>
    <string name="password_richiesta">La password è richiesta</string>
    <string name="password_min_caratteri">La password deve avere almeno di</string>
    <string name="caratteri">caratteri</string>
    <string name="autenticazione_corretta">Autenticazione corretta</string>
    <string name="verifica_email">Verifica l\'email</string>
    <string name="autenticazione_fallita">Autenticazione fallita</string>
    <string name="password_non_coincidenti">Le due password non coincidono</string>
    <string name="password_aggiornata">Password Aggiornata</string>
    <string name="password_non_aggiornata">Password non aggiornata</string>
    <string name="password_non_coincide">La password attuale non coincide</string>
    <string name="password_non_corretta">Password non corretta</string>
    <string name="campo_vuoto">Campo vuoto</string>
    <string name="inserisci_nome">Inserisci il nome</string>
    <string name="inserisci_nome_valido">Inserisci nome valido</string>
    <string name="inserisci_cognome">Inserisci il cognome</string>
    <string name="inserisci_cognome_valido">Inserisci cognome valido</string>
    <string name="controlla_la_casella">Controlla la casella di posta</string>
    <string name="prova_di_nuovo">Prova di nuovo. Qualcosa è andato storto</string>
    <string name="caricamento_in_corso">Caricamento in corso...</string>
    <string name="upload_effettuato">Upload effettuato con successo</string>
    <string name="nessun_file_selezionato">Nessun file selezionato!</string>
    <string name="informazione">Informazione</string>
    <string name="stai_gestendo">Stai gestendo</string>
    <string name="seleziona_lingua">Seleziona una lingua...</string>
    <string name="italiano">Italiano</string>
    <string name="inglese">Inglese</string>
    <string name="nuovo">Nuovo</string>
    <string name="modifica">Modifica</string>
    <string name="lista">Lista</string>
    <string name="email_esistente">Email già esistente</string>
    <string name="email_errata">Email errata</string>
    <string name="aggiornati_dati">Aggiornati dati</string>
    <string name="no_aggiornati_dati">Aggiornamento fallito</string>
    <string name="cancellazione_successo">Cancellazione avvenuta con successo</string>
    <string name="cancellazione_fallita">Cancellazione fallita</string>
    <string name="accedi_come_ospite">Accedi come ospite</string>
    <string name="registrazione">Registrazione</string>
    <string name="password_dimenticata_activity">Password dimenticata</string>
    <string name="scansiona_qr_code">Scansiona QR Code</string>
    <string name="alert_zona">Per aggiungere nuovi oggetti, devi prima inserire almeno una zona</string>
    <string name="inserisci_nome_percorso">Inserisci nome percorso</string>
    <string name="nessun_QR">Nessun QR code trovato</string>
    <string name="aggiungi_oggetto">Aggiungi oggetto</string>
    <string name="Aggiungi_da_qui">Aggiungi da qui</string>
    <string name="un_nuovo_oggetto">un nuovo oggetto</string>
    <string name="fotocamera_non_disponibile">Funzione non disponibile! il dispositivo non dispone di una fotocamera</string>
    <string name="accesso_fotocamera">Consenti l\'accesso alla fotocamera dalle impostazioni per usare questa funzionalità</string>
    <string name="accesso_risorse_esterne">Consenti l\'accesso a risorse esterne dalle impostazioni per usare questa funzionalità</string>
    <string name="doppio_tap">Doppio tap per uscire</string>
    <string name="aggiungi_zona">Aggiungi zona</string>
    <string name="crea_percorso">Aggiungi percorso</string>
    <string name="zona_msg_1">Per iniziare, aggiungi</string>
    <string name="zona_msg_2">una nuova zona</string>
    <string name="percorso_msg_1">Per iniziare, aggiungi</string>
    <string name="percorso_msg_2">un nuovo percorso</string>
    <string name="file_non_esiste">Il file non esiste!</string>
    <string name="nessun_oggetto_trovato">Nessun oggetto trovato</string>
    <string name="almeno_una_zona">You must create at least one zone for the selected place</string>
    <string name="flash">Per il flash usa il tasto volume su</string>
    <string name="inquadra">Inquadra un Qr code di un\n oggetto per visualizzarlo,\nmodificarlo o eliminarlo</string>
    <string name="dati_percorso">Dati percorso</string>
    <string name="errore_percorso_riprova">Si è verificato un errore! \nRiprova</string>
    <string name="oppure">OPPURE</string>
    <string name="carica_immagine">Carica Immagine</string>
    <string name="cerca">Ricerca</string>
    <string name="creazione_percorso">Creazione Percorso</string>
    <string name="Pulsante_luoghi">Pulsante Luoghi</string>
    <string name="Pulsante_zone">Pulsante Zone</string>
    <string name="Pulsante_oggetti">Pulsante Oggetti</string>
    <string name="Pulsante_percorsi">Pulsante Percorsi</string>
    <string name="gestire_luoghi">Potrai gestire da qui \n i tuoi luoghi</string>
    <string name="gestire_zone">Potrai gestire da qui \n le tue zone</string>
    <string name="gestire_oggetti">Potrai gestire da qui \n i tuoi oggetti</string>
    <string name="gestire_percorsi">Potrai gestire da qui \n i tuoi percorsi</string>
    <string name="Entita">Entita</string>
    <string name="Messaggio_percorso_1">Seleziona le zone che comporranno la diramazione</string>
    <string name="Messaggio_percorso_2">Effettua lo swipe a destra o sinistra per eliminare una zona</string>
    <string name="Creazione_diramazione">Creazione diramazione</string>
    <string name="AggiuntaZonaPercorso">Aggiungi\nZona</string>
    <string name="NomePercorso">Inserisci nome percorso</string>
    <string name="Messaggio_percorso_3">Seleziona le zone da aggiungere</string>
    <string name="Elimina_Percorso">Elimina Percorso</string>
</resources>