<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="100"
    tools:context=".activities.AddZonaToPercorsoActivity">

    <TextView
        android:id="@+id/titolo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="10"
        android:fontFamily="@font/posterama_1927_regular"
        android:gravity="center"
        android:text="@string/Messaggio_percorso_1"
        android:textAlignment="center"
        android:textColor="@color/orangeAction"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:layout_weight="5"
        android:fontFamily="@font/posterama_1927_light"
        android:gravity="center"
        android:text="@string/Messaggio_percorso_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="78"
        android:padding="12dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:paddingHorizontal="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_conferma"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/verdePrimario"
            android:fontFamily="@font/posterama_1927_regular"
            android:text="@string/conferma"
            android:textSize="22sp"
            app:cornerRadius="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/orangeAction"
            android:fontFamily="@font/posterama_1927_regular"
            android:text="Reset"
            android:textSize="22sp"
            app:cornerRadius="50dp" />

    </RelativeLayout>


</LinearLayout>
