<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DettaglioLuogoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome_luogo"
                        android:textColor="@color/headings"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/nomeLuogoDettaglioPiccolo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descrizione_luogo"
                        android:textColor="@color/headings"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/descrizioneDettaglio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipologia_del_luogo"
                        android:textColor="@color/headings"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tipologiaDettaglio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="22sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/impostaLuogoCorrente"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_state"
                        android:padding="10dp"
                        android:text="@string/seleziona_luogo"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/eliminaLuogo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button_state"
                        android:padding="10dp"
                        android:text="@string/elimina_luogo"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editLuogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:borderWidth="0dp"
        android:backgroundTint="@color/gialloSecondario"
        android:src="@android:drawable/ic_menu_edit"
        app:fabSize="normal" />


</RelativeLayout>