<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreazioneLuogoActivity"
    android:orientation="vertical"
    tools:ignore="LabelFor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_luogo"
                android:fontFamily="@font/posterama_1927_regular"
                android:textColor="@color/headings"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nome_luogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-light"
                android:text=""
                android:textColor="#000000"
                android:textSize="18sp"
                android:inputType="text"
                android:importantForAutofill="no" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descrizione_luogo"
                android:fontFamily="@font/posterama_1927_regular"
                android:textColor="@color/headings"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/descrizione_luogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-light"
                android:text=""
                android:textColor="#000000"
                android:textSize="18sp"
                android:inputType="text"
                android:importantForAutofill="no" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="1dp"
                android:background="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipologia_del_luogo"
                android:fontFamily="@font/posterama_1927_regular"
                android:textColor="@color/headings"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_tipologia_luoghi"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipologie_luoghi" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="1dp"
                android:background="@color/grey" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrazione"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registrati"
            android:textSize="20sp"
            android:background="@drawable/button_state"
            android:textColor="@color/white"
            android:gravity="center" />
    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressLuogo"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:SpinKit_Color="@color/verdePrimario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints" />

</LinearLayout>